# cytoskel

./: .gitignore  README.md  flake.nix
cytoskel/: pyproject.toml
cytoskel/docs/: access_cpg_staging.md
cytoskel/src/cytoskel/: cli.py  s3_access_grants.py  utils.py
cytoskel/src/cytoskel/stacks/: staging_cpg.py
