[tool.poetry]
name = "cytoskel"
version = "0.1.0"
description = ""
authors = ["Ankur Kumar <ank@leoank.me>"]
readme = "README.md"
packages = [{ include = "cytoskel", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
pulumi = "^3.111"
pulumi-aws = "^6.27"
boto3 = "^1.34"

[tool.poetry.scripts]
cytoskel = "cytoskel.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
